--- a/package.json
+++ b/package.json
@@ -3,6 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@ethersproject/abi": "^5.0.0",
+    "@ethersproject/address": "^5.0.0",
+    "@ethersproject/bignumber": "^5.0.0",
+    "@ethersproject/bytes": "^5.0.0",
+    "@ethersproject/constants": "^5.0.0",
+    "@ethersproject/contracts": "^5.0.0",
+    "@ethersproject/experimental": "^5.0.0",
+    "@ethersproject/providers": "^5.0.0",
+    "@ethersproject/strings": "^5.0.0",
+    "@ethersproject/units": "^5.0.0",
+    "@pancakeswap/sdk": "file:packages/swap-sdk",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,6 +25,8 @@
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
+    "wagmi": "^0.6.8",
+    "swr": "^1.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
