--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,6 +6,7 @@
       "dom.iterable",
       "esnext"
     ],
+    "baseUrl": "src",
     "allowJs": true,
     "skipLibCheck": true,
     "esModuleInterop": true,
@@ -18,9 +19,18 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "paths": {
+      "@pancakeswap/sdk": ["../packages/swap-sdk/src/index.ts"],
+      // "@pancakeswap/wagmi/connectors/binanceWallet": ["../packages/wagmi/connectors/binanceWallet/index.ts"],
+      // "@pancakeswap/wagmi/connectors/miniProgram": ["../packages/wagmi/connectors/miniProgram/index.ts"],
+      // "@pancakeswap/wagmi/chains": ["../packages/wagmi/chains/index.ts"],
+      // "@pancakeswap/wagmi": ["../packages/wagmi/src/index.ts"],
+      // "@pancakeswap/hooks": ["../packages/hooks/src/index.ts"]
+    }
   },
   "include": [
-    "src"
+    "src",
+    "packages"
   ]
 }
