--- a/.eslintrc
+++ b/.eslintrc
@@ -1,58 +1,58 @@
 {
-  "settings": {
-    "import/resolver": {
-      "node": {
-        "extensions": [".js", ".jsx", ".ts", ".tsx"],
-        "paths": ["./src"]
-      }
-    }
-  },
+  // "settings": {
+  //   "import/resolver": {
+  //     "node": {
+  //       "extensions": [".js", ".jsx", ".ts", ".tsx"],
+  //       "paths": ["./src"]
+  //     }
+  //   }
+  // },
   "env": {
     "es6": true,
     "browser": true,
     "jest": true
   },
   "plugins": ["lodash"],
-  "extends": "@pancakeswap/eslint-config-pancake",
+  "extends": ["@pancakeswap/eslint-config-pancake", "plugin:react/jsx-runtime", "react"],
   "rules": {
-    "array-callback-return": 0,
-    "camelcase": 0,
+    // "array-callback-return": 0,
+    // "camelcase": 0,
     "lodash/import-scope": [2, "method"],
     "max-classes-per-file": 0,
-    "object-shorthand": 0,
+    // "object-shorthand": 0,
     "prefer-destructuring": ["warn", { "object": true, "array": false }],
     "unused-imports/no-unused-imports-ts": 0,
     "radix": 0,
-    // "react-hooks/exhaustive-deps": [
-    //   "warn",
-    //   {
-    //     "additionalHooks": "(useFastRefreshEffect|useSlowRefreshEffect)"
-    //   }
-    // ],
-    "react-hooks/exhaustive-deps":"off",
+    "react-hooks/exhaustive-deps": [
+      "warn",
+      {
+        "additionalHooks": "(useFastRefreshEffect|useSlowRefreshEffect)"
+      }
+    ],
+    // "react-hooks/exhaustive-deps":"off",
     
-    "react/button-has-type": 0,
+    // "react/button-has-type": 0,
     "react/display-name": 0,
-    "react/jsx-curly-brace-presence": [0, "never"],
+    // "react/jsx-curly-brace-presence": [0, "never"],
     "react/jsx-key": 0,
-    "react/no-array-index-key": 0,
+    // "react/no-array-index-key": 0,
     "react/no-unescaped-entities": "off",
     "react/require-default-props": 0,
     "react/self-closing-comp": 0,
     
-    "no-await-in-loop":"off",
+    // "no-await-in-loop":"off",
     "no-console": ["warn", { "allow": ["info", "warn", "error", "debug"] }],
-    "no-empty": 0,
+    // "no-empty": 0,
     "no-nested-ternary": 0,
-    "no-param-reassign":"off",
-    // "no-param-reassign": ["error", { "props": true, "ignorePropertyModificationsFor": ["state", "memo"] }],
+    // "no-param-reassign":"off",
+    "no-param-reassign": ["error", { "props": true, "ignorePropertyModificationsFor": ["state", "memo"] }],
     "no-plusplus": 0,
-    "no-return-await": 0,
+    // "no-return-await": 0,
     "no-sparse-arrays": 0,
     "no-underscore-dangle": 0,
-    "no-unneeded-ternary": 0,
-    "no-unused-expressions": 0,
-    "no-useless-rename": 0,
+    // "no-unneeded-ternary": 0,
+    // "no-unused-expressions": 0,
+    // "no-useless-rename": 0,
     "no-unused-vars": "off",
 
     "@next/next/no-page-custom-font": "off",
@@ -64,31 +64,32 @@
     "import/no-extraneous-dependencies": 0,
     "import/no-named-as-default": 0,
     "import/no-unresolved": 0,
-    "import/prefer-default-export": 0,
+    // "import/prefer-default-export": 0,
 
-    // "@typescript-eslint/ban-ts-comment": [1, { "ts-ignore": false, "ts-nocheck": false }],
-    "@typescript-eslint/ban-ts-comment": 0,
+    "@typescript-eslint/ban-ts-comment": [1, { "ts-ignore": false, "ts-nocheck": false }],
+    // "@typescript-eslint/ban-ts-comment": 0,
     "@typescript-eslint/explicit-module-boundary-types": 0,
-    "@typescript-eslint/no-empty-function": 0,
-    "@typescript-eslint/no-empty-interface": ["error", { "allowSingleExtends": true }],
+    // "@typescript-eslint/no-empty-function": 0,
+    // "@typescript-eslint/no-empty-interface": ["error", { "allowSingleExtends": true }],
     "@typescript-eslint/no-explicit-any": 0,
-    "@typescript-eslint/no-shadow": 0,
+    // "@typescript-eslint/no-shadow": 0,
+    "@typescript-eslint/no-unused-vars": 0,
     "@typescript-eslint/no-use-before-define": 0,
 
     "jsx-a11y/media-has-caption": 0,
-    "jsx-a11y/click-events-have-key-events": 0,
-    "jsx-a11y/no-static-element-interactions": 0,
-    "jsx-a11y/label-has-associated-control": 0,
+    // "jsx-a11y/click-events-have-key-events": 0,
+    // "jsx-a11y/no-static-element-interactions": 0,
+    // "jsx-a11y/label-has-associated-control": 0,
 
     /* pancake */
-    "dot-notation": 0,
-    "eqeqeq": 0,
+    // "dot-notation": 0,
+    // "eqeqeq": 0,
     "import/order": 0,
-    "prefer-const": 0,
-    "no-var": 0,
-    "no-else-return": 0,
-    "react/jsx-fragments": 0,
-    "react/jsx-filename-extension": 0,
-    "react/jsx-no-target-blank": 0
+    // "prefer-const": 0,
+    // "no-var": 0,
+    // "no-else-return": 0,
+    // "react/jsx-fragments": 0,
+    // "react/jsx-filename-extension": 0,
+    // "react/jsx-no-target-blank": 0
   }
 }
