--- a/package.json
+++ b/package.json
@@ -7,8 +7,6 @@
     "apis/*"
   ],
   "dependencies": {
-    "@binance-chain/bsc-connector": "^1.0.0",
-    "@dopex-io/web3-multicall": "^0.1.10",
     "@ethersproject/abi": "^5.0.0",
     "@ethersproject/address": "^5.0.0",
     "@ethersproject/bignumber": "^5.0.0",
@@ -20,19 +18,11 @@
     "@ethersproject/strings": "^5.0.0",
     "@ethersproject/units": "^5.0.0",
     "@gelatonetwork/limit-orders-lib": "^4.1.0",
-    "@glidejs/glide": "^3.6.1",
     "@gnosis.pm/safe-apps-wagmi": "^1.0.2",
-    "@headlessui/react": "^2.0.4",
-    "@heroicons/react": "^2.1.3",
     "@pancakeswap/sdk": "^5.4.2",
-    "@reduxjs/toolkit": "^2.2.5",
-    "@sentry/react": "^8.9.2",
-    "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.7",
-    "@tailwindcss/line-clamp": "^0.4.4",
-    "@tailwindcss/typography": "^0.5.13",
-    "@types/styled-system": "^5.1.22",
-    "@uniswap/token-lists": "^1.0.0-beta.34",
+    "@reduxjs/toolkit": "^1.8.2",
+    "@sentry/react": "^7.9.0",
+    "@uniswap/token-lists": "^1.0.0-beta.19",
     "@web3-react/core": "^8.2.2",
     "ajv": "^6.12.3",
     "axios": "^1.7.2",
@@ -49,7 +39,6 @@
     "graphql-request": "^4.2.0",
     "jotai": "^1.7.8",
     "js-cookie": "^3.0.1",
-    "jsbi": "^4.3.0",
     "lightweight-charts": "^3.8.0",
     "local-storage": "^2.0.0",
     "localforage": "^1.10.0",
@@ -57,36 +46,30 @@
     "moment": "^2.29.4",
     "multicodec": "^3.2.1",
     "multihashes": "^4.0.3",
-    "next-themes": "^0.3.0",
+    "next-themes": "^0.2.0",
     "numeral": "^2.0.6",
     "openai": "^4.51.0",
     "postcss": "^8.4.38",
     "qs": "^6.12.1",
     "rc-slider": "^10.6.2",
-    "react": "^18.2.0",
-    "react-alice-carousel": "^2.9.1",
-    "react-bootstrap": "^2.10.2",
-    "react-bootstrap-button-loader": "^2.0.0",
-    "react-countup": "^6.3.0",
-    "react-datepicker": "^4.8.0",
+    "react": "^17.0.1",
+    "react-countup": "^4.3.3",
+    "react-datepicker": "^4.2.1",
     "react-device-detect": "^2.1.2",
-    "react-dom": "^18.2.0",
-    "react-helmet-async": "^2.0.5",
+    "react-dom": "^17.0.1",
+    "react-helmet-async": "^1.0.9",
     "react-hot-toast": "^2.4.1",
     "react-markdown": "^6.0.2",
-    "react-redux": "^8.0.2",
+    "react-redux": "^7.2.4",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "4.0.1",
     "react-transition-group": "^4.4.1",
-    "react-window": "^1.8.7",
-    "recharts": "^2.12.7",
-    "redux-localstorage-simple": "^2.5.1",
+    "react-window": "^1.8.6",
+    "recharts": "2.1.12",
     "redux-persist": "^6.0.0",
     "remark-gfm": "^4.0.0",
-    "sass": "^1.77.5",
     "split-grid": "^1.0.11",
     "styled-components": "^5.3.3",
-    "styled-system": "^5.1.5",
     "swiper": "^8.4.2",
     "swr": "^1.3.0",
     "typescript": "^4.6.3",
@@ -94,59 +77,49 @@
     "web-vitals": "^2.1.4"
   },
   "devDependencies": {
-    "@commitlint/cli": "^19.3.0",
-    "@commitlint/config-conventional": "^19.2.2",
     "@stylelint/postcss-css-in-js": "^0.37.2",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^13.3.0",
     "@testing-library/react-hooks": "^8.0.1",
     "@testing-library/user-event": "^13.5.0",
     "@typechain/ethers-v5": "^8.0.5",
-    "@types/canvas-confetti": "^1.6.4",
-    "@types/jest": "^27.5.2",
-    "@types/lodash": "^4.17.5",
-    "@types/multicodec": "^2.1.0",
-    "@types/node": "^16.18.98",
-    "@types/react": "^18.0.17",
-    "@types/react-datepicker": "^4.4.1",
-    "@types/react-dom": "^18.0.6",
-    "@types/react-redux": "^7.1.24",
+    "@types/canvas-confetti": "^1.4.2",
+    "@types/jest": "^26.0.23",
+    "@types/lodash": "^4.14.178",
+    "@types/node": "^13.13.5",
+    "@types/react": "^17.0.5",
+    "@types/react-datepicker": "^3.1.8",
+    "@types/react-dom": "^17.0.4",
+    "@types/react-redux": "^7.1.16",
     "@types/react-router-dom": "^5.1.5",
     "@types/react-transition-group": "^4.4.1",
     "@types/react-window": "^1.8.3",
     "@types/simplemde": "^1.11.7",
-    "@types/styled-components": "^5.1.26",
-    "@uniswap/v2-core": "^1.0.1",
-    "@uniswap/v2-periphery": "^1.1.0-beta.0",
-    "@web3-react/injected-connector": "^6.0.7",
-    "@web3-react/walletconnect-connector": "^6.2.13",
-    "autoprefixer": "^10.4.19",
-    "cypress": "^13.11.0",
+    "@types/styled-components": "^5.1.7",
     "eslint": "^7.26.0",
     "eslint-plugin-cypress": "^2.11.3",
     "eslint-plugin-lodash": "^7.4.0",
     "husky": "^7.0.0",
-    "jest": "^29.7.0",
-    "lerna": "^8.1.3",
-    "lint-staged": "^15.2.6",
-    "patch-package": "^8.0.0",
-    "postcss-cli": "^11.0.0",
-    "postcss-scss": "^4.0.9",
+    "jest": "26.6.0",
+    "lerna": "^4.0.0",
+    "lint-staged": "^12.3.4",
+    "patch-package": "^6.4.7",
+    "postcss-scss": "^4.0.3",
     "postcss-syntax": "^0.36.2",
-    "prettier": "^3.3.2",
-    "serve": "^14.2.3",
-    "source-map-explorer": "^2.5.3",
-    "start-server-and-test": "^2.0.4",
-    "stylelint": "^16.6.1",
-    "stylelint-config-prettier": "^9.0.5",
-    "stylelint-config-recommended": "^14.0.0",
-    "stylelint-config-standard": "^36.0.0",
+    "prettier": "^2.7.1",
+    "serve": "^12.0.0",
+    "source-map-explorer": "^2.5.2",
+    "start-server-and-test": "^1.14.0",
+    "stylelint": "^14.5.3",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-recommended": "^7.0.0",
+    "stylelint-config-standard": "^25.0.0",
     "stylelint-config-styled-components": "^0.1.1",
-    "ts-node": "^10.9.2",
-    "turbo": "^2.0.3",
+    "ts-node": "^10.9.1",
     "typechain": "^6.1.0",
-    "universal-cookie": "^7.1.4",
-    "use-query-params": "^2.2.1"
+    "universal-cookie": "^4.0.4",
+    "use-query-params": "^1.2.3",
+    "vitest": "^0.23.1"
   },
   "scripts": {
     "start": "react-scripts start",
