--- a/packages/uikit/package.json
+++ b/packages/uikit/package.json
@@ -26,35 +26,36 @@
     "@babel/preset-react": "^7.16.7",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-typescript": "^8.2.1",
-    "@rollup/plugin-url": "6.0.0",
-    "@storybook/addon-a11y": "6.1.12",
-    "@storybook/addon-actions": "6.1.12",
-    "@storybook/addon-essentials": "6.1.12",
-    "@storybook/addon-links": "6.1.12",
-    "@storybook/builder-vite": "0.1.22",
-    "@storybook/react": "6.1.12",
+    "@rollup/plugin-url": "^6.0.0",
+    "@storybook/addon-a11y": "^6.5.0",
+    "@storybook/addon-actions": "^6.5.0",
+    "@storybook/addon-essentials": "^6.5.0",
+    "@storybook/addon-links": "^6.5.0",
+    "@storybook/builder-vite": "^0.2.0",
+    "@storybook/react": "^6.5.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^12.1.3",
     "@types/lodash": "^4.14.168",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.1.7",
-    "babel-jest": "^26.6.0",
+    "babel-jest": "^27.5.1",
+    "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
     "jest-styled-components": "^7.0.8",
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-is": "^17.0.2",
     "react-router-dom": "^5.2.0",
     "rollup": "^2.70.1",
     "styled-components": "^5.3.3",
-    "themeprovider-storybook": "1.6.4",
-    "ts-jest": "26.5.0",
+    "themeprovider-storybook": "^1.7.2",
+    "ts-jest": "^27.1.3",
     "vite": "^3.0.0"
   },
   "peerDependencies": {
-    "react": "^17.0.1",
-    "react-dom": "^17.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "styled-components": "^5.2.3"
   },
   "dependencies": {
