--- a/packages/uikit/tsconfig.json
+++ b/packages/uikit/tsconfig.json
@@ -1,6 +1,5 @@
 {
   "compilerOptions": {
-    "target": "ES5",
     "lib": ["dom", "DOM.Iterable", "ESNext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -13,12 +12,10 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": true,
-    "jsx": "react-jsx",
-    "noEmitOnError": true,
-    "noFallthroughCasesInSwitch": true
+    "noEmit": false,
+    "jsx": "react-jsx"
   },
-  // "types": ["vitest/globals"],
+  "types": ["vitest/globals"],
   "include": ["src"],
   "exclude": ["node_modules", "src/**/*.stories.tsx", "src/__tests__/**/*", "src/testHelpers.tsx"]
 }
