--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,7 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "module": "esnext",
+    // "extendedDiagnostics": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
@@ -22,7 +23,15 @@
     "jsx": "react-jsx",
     "strictNullChecks": false,
     "noImplicitAny": false,
-    "downlevelIteration": true
+    "downlevelIteration": true,
+    "paths": {
+      "@pancakeswap/sdk": ["../packages/swap-sdk/src/index.ts"],
+      "@pancakeswap/wagmi/connectors/binanceWallet": ["../packages/wagmi/connectors/binanceWallet/index.ts"],
+      "@pancakeswap/wagmi/connectors/miniProgram": ["../packages/wagmi/connectors/miniProgram/index.ts"],
+      "@pancakeswap/wagmi/chains": ["../packages/wagmi/chains/index.ts"],
+      "@pancakeswap/wagmi": ["../packages/wagmi/src/index.ts"],
+      "@pancakeswap/hooks": ["../packages/hooks/src/index.ts"]
+    }
   },
   "exclude": [
     "node_modules",
@@ -30,7 +39,6 @@
   ],
   "include": [
     "./src/**/*.ts",
-    "./src/**/*.tsx",
-    "./src/**/*.css"
+    "./src/**/*.tsx"
   ]
 }
