--- a/.env
+++ b/.env
@@ -11,3 +11,5 @@ REACT_APP_NODE_2 = "https://pulsechain-rpc.publicnode.com"
 REACT_APP_NODE_3 = "https://pulsechain-rpc.publicnode.com"
 
 REACT_PUBLIC_SNAPSHOT_BASE_URL = "https://dex.dextop.pro"
+
+GENERATE_SOURCEMAP="false"
