--- a/packages/uikit/package.json
+++ b/packages/uikit/package.json
@@ -2,28 +2,43 @@
   "name": "@pancakeswap/uikit",
   "version": "0.63.1",
   "description": "Set of UI components for pancake projects",
-  "main": "src/index.ts",
-  "sideEffects": [
-    "*.css.ts"
+  "main": "dist/index.cjs.js",
+  "module": "dist/index.esm.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
   ],
   "repository": "https://github.com/pancakeswap/pancake-toolkit/tree/master/packages/pancake-uikit",
   "license": "MIT",
   "scripts": {
-    "start": "yarn storybook",
-    "build:rollup": "rm -rf ./dist && rollup -c && tsc -d --emitDeclarationOnly --declarationDir dist",
-    "watch": "rollup -c -w",
+    "start": "react-scripts start",
+    "build": "rollup -c && tsc -d --emitDeclarationOnly --declarationDir dist",
     "lint": "eslint 'src/**/*.{js,jsx,ts,tsx}'",
-    "format:check": "prettier --check --loglevel error 'src/**/*.{js,jsx,ts,tsx}'",
-    "format:write": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
+    "format": "prettier --write 'src/**/*.{js,jsx,ts,tsx}'",
     "storybook": "start-storybook -p 6006",
-    "storybook:build": "build-storybook",
+    "build-storybook": "build-storybook",
     "test": "jest",
-    "prepublishOnly": "yarn build"
+    "release": "yarn build && np"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "yarn format",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
+    }
+  },
+  "jest": {
+    "setupFilesAfterEnv": [
+      "<rootDir>/src/setupTests.js"
+    ]
   },
   "devDependencies": {
     "@babel/core": "^7.16.7",
     "@babel/preset-env": "^7.16.8",
     "@babel/preset-react": "^7.16.7",
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "@pancakeswap-libs/eslint-config-pancake": "^1.0.1",
+    "@radix-ui/react-slot": "^1.0.2",
     "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-typescript": "^8.2.1",
     "@rollup/plugin-url": "^6.0.0",
@@ -35,15 +50,26 @@
     "@storybook/react": "^6.5.0",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^12.1.3",
-    "@types/lodash": "^4.14.168",
+    "@types/lodash": "^4.17.5",
     "@types/react": "^18.0.17",
     "@types/react-dom": "^18.0.6",
     "@types/react-router-dom": "^5.1.7",
+    "@types/react-transition-group": "^4.4.10",
+    "@types/styled-components": "^5.1.34",
+    "@typescript-eslint/eslint-plugin": "^7.13.0",
+    "@typescript-eslint/parser": "^7.13.0",
+    "@vanilla-extract/css-utils": "^0.1.4",
+    "@vanilla-extract/sprinkles": "^1.6.2",
     "babel-jest": "^27.5.1",
     "babel-loader": "^8.2.2",
     "babel-plugin-styled-components": "^1.12.0",
+    "clsx": "^2.1.1",
+    "eslint": "^9.5.0",
+    "husky": "^9.0.11",
     "jest-styled-components": "^7.0.8",
+    "np": "^10.0.5",
     "react": "^18.2.0",
+    "react-device-detect": "^2.2.3",
     "react-dom": "^18.2.0",
     "react-is": "^17.0.2",
     "react-router-dom": "^5.2.0",
@@ -51,6 +77,7 @@
     "styled-components": "^5.3.3",
     "themeprovider-storybook": "^1.7.2",
     "ts-jest": "^27.1.3",
+    "typescript": "^5.4.5",
     "vite": "^3.0.0"
   },
   "peerDependencies": {
@@ -60,14 +87,14 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.9.2",
-    "@types/styled-system": "^5.1.15",
-    "@pancakeswap/ui": "*",
+    "@types/styled-system": "^5.1.22",
     "@vanilla-extract/vite-plugin": "^3.3.1",
     "framer-motion": "6.5.1",
     "lodash": "^4.17.20",
     "react-popper": "^2.2.5",
+    "react-transition-group": "^4.4.5",
     "styled-system": "^5.1.5",
-    "tslib": "^2.2.0"
+    "tslib": "^2.6.3"
   },
   "publishConfig": {
     "access": "public"
