--- a/packages/uikit/tsconfig.json
+++ b/packages/uikit/tsconfig.json
@@ -1,5 +1,6 @@
 {
   "compilerOptions": {
+    "target": "ES5",
     "lib": ["dom", "DOM.Iterable", "ESNext"],
     "allowJs": true,
     "skipLibCheck": true,
@@ -12,10 +13,11 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "noEmit": false,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "noFallthroughCasesInSwitch": true,
+    "preserveSymlinks": false,
+    "noImplicitAny": false
   },
-  "types": ["vitest/globals"],
   "include": ["src"],
-  "exclude": ["node_modules", "src/**/*.stories.tsx", "src/__tests__/**/*", "src/testHelpers.tsx"]
+  "exclude": ["node_modules", "src/**/*.stories.tsx", "src/__tests__/**/*"]
 }
