--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   ],
   "dependencies": {
     "@binance-chain/bsc-connector": "^1.0.0",
+    "@craco/craco": "^7.1.0",
     "@dopex-io/web3-multicall": "^0.1.10",
     "@ethersproject/abi": "^5.0.0",
     "@ethersproject/address": "^5.0.0",
@@ -24,7 +25,7 @@
     "@gnosis.pm/safe-apps-wagmi": "^1.0.2",
     "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
-    "@pancakeswap/sdk": "^5.4.2",
+    "@pancakeswap/sdk": "3.1.0",
     "@pancakeswap/uikit": "^0.63.1",
     "@reduxjs/toolkit": "^2.2.5",
     "@sentry/react": "^8.9.2",
@@ -41,11 +42,13 @@
     "canvas-confetti": "^1.5.1",
     "cids": "^1.0.0",
     "clsx": "^1.2.1",
+    "craco-babel-loader": "^1.0.4",
     "date-fns": "^2.21.3",
     "dexscreener-api": "^0.0.7",
     "disable-react-error-overlay": "^0.0.1",
     "easymde": "^2.16.1",
     "fast-json-stable-stringify": "^2.1.0",
+    "fs": "^0.0.1-security",
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
     "jotai": "^1.7.8",
@@ -61,6 +64,7 @@
     "next-themes": "^0.3.0",
     "numeral": "^2.0.6",
     "openai": "^4.51.0",
+    "path": "^0.12.7",
     "postcss": "^8.4.38",
     "qs": "^6.12.1",
     "rc-slider": "^10.6.2",
@@ -144,6 +148,7 @@
     "stylelint-config-standard": "^36.0.0",
     "stylelint-config-styled-components": "^0.1.1",
     "ts-node": "^10.9.2",
+    "tsconfig-paths-webpack-plugin": "^4.1.0",
     "turbo": "^2.0.3",
     "typechain": "^6.1.0",
     "universal-cookie": "^7.1.4",
@@ -151,6 +156,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:craco": "craco start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
